--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=5.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -14,6 +13,30 @@
     <title>Ayvazovskiy</title>
 </head>
 <body>
-Ayvazovskiy
+<header aria-label="header" class="header">
+    <div class="container">
+        <nav aria-label="header navigation" class="nav">
+            <ul aria-label="header navigation list" class="nav-list">
+                <li>
+                    <a aria-label="link to home" class="nav-link" href="#">Home</a>
+                </li>
+                <li>
+                    <a aria-label="link to about" class="nav-link" href="#">About</a>
+                </li>
+                <li>
+                    <a aria-label="link to history" class="nav-link" href="#">History</a>
+                </li>
+                <li>
+                    <a aria-label="link to portfolio" class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a aria-label="link to contacts" class="nav-link" href="#">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<main></main>
+<footer></footer>
 </body>
 </html>
