--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
         </nav>
     </div>
 </header>
-<main></main>
+<main aria-label="main">
+    <section aria-label="home section" class="home">
+        <div class="container">
+            <h1 aria-label="title" class="home-title">Ivan Constantinovich Aivazovski</h1>
+            <p aria-label="description" class="home-description">Russian marine painter of Armenian origin, collector,
+                philanthropist</p>
+            <img alt="photo of Ayvazovskiy" class="home-img" src="assets/webp/home.webp">
+        </div>
+    </section>
+</main>
 <footer></footer>
 </body>
 </html>
