--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
             </p>
         </div>
     </section>
+    <section aria-label="history section" class="history">
+        <div class="container">
+            <h2 aria-label="history title" class="history-title">History</h2>
+            <img alt="house of Ayvazovskiy" class="history-photo" src="assets/webp/history.webp">
+            <p aria-label="history description" class="history-description">
+                Дом в котором родился Айвазовский | The house where Aivazovsky was born
+            </p>
+        </div>
+    </section>
 </main>
 <footer></footer>
 </body>
