--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a aria-label="link to portfolio" class="nav-link" href="#portfolio-id">Portfolio</a>
                 </li>
                 <li>
-                    <a aria-label="link to contacts" class="nav-link" href="#">Contacts</a>
+                    <a aria-label="link to contacts" class="nav-link" href="#contacts-id">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -95,6 +95,36 @@
         </div>
     </section>
 </main>
-<footer></footer>
+<footer aria-label="contacts section" class="contacts" id="contacts-id">
+    <div class="container">
+        <h2 class="contacts-title">Contacts</h2>
+        <a class="button-link" href="https://aivazovsky.world/" target="_blank">aivazovsky.world</a>
+        <address aria-label="socials icons" class="socials">
+            <a aria-label="link to youtube" href="https://youtube.com" target="_blank">
+                <svg aria-label="youtube icon" class="social-icon">
+                    <use href="assets/sprites.svg#youtube_icon"></use>
+                </svg>
+            </a>
+            <a aria-label="link to linkedin" href="https://linkedin.com" target="_blank">
+                <svg aria-label="linkedin icon" class="social-icon">
+                    <use href="assets/sprites.svg#linkedin_icon"></use>
+                </svg>
+            </a>
+            <a aria-label="link to instagram" href="https://www.instagram.com/" target="_blank">
+                <svg aria-label="instagram icon" class="social-icon">
+                    <use href="assets/sprites.svg#instagram_icon"></use>
+                </svg>
+            </a>
+            <a aria-label="link to facebook" href="https://www.facebook.com" target="_blank">
+                <svg aria-label="facebook icon" class="social-icon">
+                    <use href="assets/sprites.svg#facebook_icon"></use>
+                </svg>
+            </a>
+        </address>
+        <p aria-label="just for notice" class="contacts-info">
+            More works you can see in these social networks
+        </p>
+    </div>
+</footer>
 </body>
 </html>
